--- a/sass/_contribute.scss
+++ b/sass/_contribute.scss
@@ -17,7 +17,7 @@
       }
     }
     .container {
-      margin-left: 3rem;
+      margin-left: 3vw;
       padding-left: 0;
       padding-bottom: 0;
   
