--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -11,6 +11,13 @@
     a.link-twittercontact, a.link-github, a.link-rss, a.link-support {
       border-top-left-radius: 0px;
       border-bottom-right-radius: 0px;
+      border: 1px solid var(--color-background);
+      background-color: inherit;
+      color: var(--color-background);
+      &:focus, &:hover {
+        background-color: var(--color-background);
+        color: var(--color-primary);
+      }
     }
   }
 
