--- a/sass/_guidelines.scss
+++ b/sass/_guidelines.scss
@@ -50,8 +50,8 @@
 
   @media (min-width: 769px) {
     .container {
-      max-width: 90ch;
-      margin-left: 3rem;
+      max-width: 80ch;
+      margin-left: 3vw;
 
       h2 {
         align-self: flex-start;
