--- a/sass/_links.scss
+++ b/sass/_links.scss
@@ -4,8 +4,8 @@
   left: -10000px;
   width: 1px;
   height: 1px;
-  background-color: var(--color-secondary);
-  color: #fff;
+  background-color: var(--color-primary);
+  color: var(--color-background);
   font-size: 1.125rem;
   overflow: hidden;
 
@@ -37,18 +37,21 @@
   line-height: 1;
   text-align: center;
   text-decoration: none;
-  box-shadow: 0px 4px 10px rgba(46, 61, 73, 0.45); 
-    cursor: pointer;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+  box-shadow: 0px 4px 10px rgba(46, 61, 73, 0.45);
+  cursor: pointer;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 
-    &:hover {
-      border-radius: 0;
-    }
+  &:hover,
+  &:focus-within {
+    border-radius: 0;
+  }
 
-  &:focus {
+  &:focus,
+  &:focus-within {
     outline-color: transparent;
     outline-style: solid;
+    transform: translateY(-5px);
   }
 }
 
