--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -38,7 +38,7 @@ nav {
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     ul {
       display: flex;
       flex-wrap: wrap;
